--- a/css/foundation.css
+++ b/css/foundation.css
@@ -1,3 +1,5 @@
+
+
 meta.foundation-version {
   font-family: "/5.5.2/"; }
 
@@ -6322,3 +6324,53 @@ th.hide-for-touch {
 @media not print {
   .show-for-print {
     display: none !important; } }
+@media only screen and (min-width: 40em) {
+  .top-bar {
+    text-align: center; }
+
+  ul.center-buttons {
+    display: inline-block;
+  }
+
+  .logo {
+    left: 5px;
+    top: -1px;
+      bottom: 2px;
+    position: absolute;
+ } }
+
+.logo {
+  max-width: 2rem;
+  margin-top: -2px;
+  margin-left: 5px;
+   
+}
+
+.menu-icon {
+  padding-top: 1.2rem;
+padding-bottom: 1.2rem;}
+
+.top-bar.expanded {
+  background: #333333; }
+
+.logo {
+  margin-top: .1rem; }
+div.file-inputs {
+position: relative;
+}
+
+div.hidden-input {
+position: absolute;
+top: 0px;
+left: 0px;
+z-index: 1;
+}
+
+input.file {
+position: relative;
+    text-align: right;
+-moz-opacity:0 ;
+filter:alpha(opacity: 0);
+opacity: 0;
+z-index: 2;
+}
